@@ -23,10 +23,10 @@ is( $pg->key_name, 'PostgreSQL', "Check key name" );
 
 ok( $pg->installed, "PostgreSQL is installed" );
 is( $pg->name, "PostgreSQL", "Get name" );
-is( $pg->version, "7.4.3", "Test Version" );
-is( $pg->major_version, '7', "Test major version" );
-is( $pg->minor_version, '4', "Test minor version" );
-is( $pg->patch_version, '3', "Test patch version" );
+is( $pg->version, "8.0.0beta4", "Test Version" );
+is( $pg->major_version, '8', "Test major version" );
+is( $pg->minor_version, '0', "Test minor version" );
+is( $pg->patch_version, '0', "Test patch version" );
 is( $pg->lib_dir, '/usr/local/pgsql/lib', "Test lib dir" );
 is( $pg->bin_dir, '/usr/local/pgsql/bin', "Test bin dir" );
 is( $pg->so_lib_dir, '/usr/local/pgsql/lib', "Test so lib dir" );
